--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         "php": ">=7.2.12"
     },
     "autoload": {
-        "psr-0": {
-            "functions": "src/"
-        }
+      "classmap":[
+          "src/"
+      ]
     }
 }
