--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,6 @@
         "php": ">=7.2.12"
     },
     "autoload": {
-      "files":["src/functions.php, src/functions_strict.php"]
+      "files":["src/functions.php", "src/functions_strict.php"]
     }
 }
