--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=7.2.12"
+        "php": ">=7.2.12",
+        "monolog/monolog": "^2.0@dev"
     },
     "autoload": {
       "files":["src/functions.php", "src/functions_strict.php"]
